--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .applications ul {
+  background-color: blue;
         columns: 1;
     }
     
